# photo-statistics

./: .gitignore  Cargo.toml  README.md  generate-coverage.sh  sonar-project.properties
.github/: FUNDING.yml
.github/workflows/: release-on-merge.yml  rust.yml
docs/: tasks.md
src/: config.rs  database.rs  errors.rs  exiftool.rs  files.rs  lib.rs  main.rs  statistics.rs  utils.rs  worker.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tests/: integration.rs
ui/: index.html  metadata.html  package-lock.json  package.json  vite.config.js
ui/src/: basic.test.js
