[package]
name = "photo-statistics"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
walkdir = "2.5.0"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
env_logger = "0.11.3"
chrono = "0.4.37"
tempfile = "3.10.1"
assert_cmd = "2.0.14"
thiserror = "2.0.0"
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indicatif = "0.18.0"